fix(matching): add companyId to BucketKey to prevent cross-company tap collision
Same busId shared by two companies on the same day would land taps in the
same bucket and incorrectly match across companies. Adding companyId to the
bucket key isolates each company's taps correctly.

Co-Authored-By: Claude Sonnet <noreply@anthropic.com>